resolved table column left alignment, and sort button

--- a/webserver/static/isptoolbox/src/sass/molecules/_modals.sass
+++ b/webserver/static/isptoolbox/src/sass/molecules/_modals.sass
@@ -33,16 +33,6 @@
         padding: 2rem 2rem 3rem 2rem
         justify-content: end
 
-.theme-modal .modal-lg
-    .modal-header
-        padding: 2.5rem 3rem 1rem 3rem
-    .modal-body
-        padding: 0 3rem 4rem 3rem
-    .modal-body ~ .modal-footer
-        padding: 0 3rem 4rem 3rem
-    .modal-footer
-        padding: 3rem 3rem 4rem 3rem
-
 .theme-modal .modal_disclaimers
     padding-top: 20px
     text-align: left
@@ -90,7 +80,7 @@
     .table-header
         align-items: flex-end
         display: flex
-        padding: 30px 20px 10px
+        padding: 3rem 2rem 1rem
         width: 100%
     .container_intro p
         font-size: $base-font-size
