--- a/webserver/static/isptoolbox/src/sass/molecules/_tables.sass
+++ b/webserver/static/isptoolbox/src/sass/molecules/_tables.sass
@@ -31,18 +31,15 @@
     .th-column
         font-weight: bold
     .workspace-name
-        width: 60%
+        width: 50%
         a:not(.sort-ap)
             display: block
     .tower-count
         width: 10%
-        text-align: left
     .last-edit
         width: 20%
-        text-align: left
     .actions
         width: 10%
-        text-align: right
         margin-left: 1rem
     .session-btn
         border: 0
@@ -66,9 +63,9 @@
         .workspace-name
             width: 45%
         .tower-count
-            width: 20%
+            width: 10%
         .last-edit
-            width: 25%
+            width: 20%
         .actions
             width: 10%
             margin-left: 1rem
@@ -82,7 +79,6 @@
             flex-flow: column
         .workspace-name, .tower-count, .last-edit, .actions
             width: 100%
-            text-align: left
         .workspace-name
             margin-bottom: 10px
         .mobile-only
